--- a/Incorrect Page.html
+++ b/Incorrect Page.html
@@ -13,7 +13,7 @@
             <div style="position:relative; top: 320px"> The Aliens will now take over the planet!</div>
             <div style="position:relative; top: 340px"> Please Start Again</div>
             <img style="position:relative; top: -130px" src="download.jpg" alt="red x">
-            <div style= "position:relative; top: 200px" class="Back to Welcome Page"> <a href= "index.html"> Start Again </a></div>
+            <div style= "position:relative; top: 200px" class="Back to Welcome Page"> <a href= "Welcome Page.html"> Start Again </a></div>
         </body>
     </head>
 </html>
