--- a/Town.html
+++ b/Town.html
@@ -124,15 +124,15 @@
 </div>
 
 <div style="position: relative; left: 100px; position: relative; bottom: 100px;" class="a1">
-    <a href="Incorrect desert.html">A</a>
+    <a href="incorrect desert.html">A</a>
 </div>
 
 <div style="position: relative; left: 400px; position: relative; bottom: 177px;" class="a2">
-    <a href="Incorrect desert.html">B</a>
+    <a href="incorrect desert.html">B</a>
 </div>
 
 <div style="position: relative; left: 750px; position: relative; bottom: 253px;" class="a3">
-    <a href="Incorrect desert.html">C</a>
+    <a href="incorrect desert.html">C</a>
 </div>
 
 <div style="position: relative; left: 1100px; position: relative; bottom: 328px;" class="a4">
