--- a/Oasis.html
+++ b/Oasis.html
@@ -109,7 +109,7 @@
     </div>
     
     <div style="position: relative; left: 100px; position: relative; bottom: 100px;" class="a1">
-        <a href="Incorrect desert.html">A</a>
+        <a href="incorrect desert.html">A</a>
     </div>
     
     <div style="position: relative; left: 400px; position: relative; bottom: 177px;" class="a2">
